# flights-

./: .gitignore  CMakeLists.txt  README.md  global.cpp  main.cpp
controller/: controllercompany.cpp  controllercompany.h  controllerflight.cpp  controllerflight.h  controllerfood.cpp  controllerfood.h  controllerplane.cpp  controllerplane.h  controlleruser.cpp  controlleruser.h  foodservice.cpp  foodservice.h
entity/: admin.cpp  admin.h  client.cpp  client.h  company.cpp  company.h  flight.cpp  flight.h  food.cpp  food.h  order.cpp  order.h  plane.cpp  plane.h  record.cpp  record.h  user.cpp  user.h
model/: adminmodel.cpp  adminmodel.h  clientmodel.cpp  clientmodel.h  companymodel.cpp  companymodel.h  flightfilterproxymodel.cpp  flightfilterproxymodel.h  flightmodel.cpp  flightmodel.h  foodmodel.cpp  foodmodel.h  ordermodel.cpp  ordermodel.h  planemodel.cpp  planemodel.h  usermodel.cpp  usermodel.h
tool/: encoder.cpp  encoder.h  recordtool.cpp  recordtool.h
view/: addfoodwindow.cpp  addfoodwindow.h  addfoodwindow.ui  adminform.cpp  adminform.h  adminform.ui  companyregisterdialog.cpp  companyregisterdialog.h  companyregisterdialog.ui  flightwidget.cpp  flightwidget.h  flightwidget.ui  logindialog.cpp  logindialog.h  logindialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  orderview.cpp  orderview.h  passwordchange.cpp  passwordchange.h  passwordchange.ui  personalpage.cpp  personalpage.h  personalpage.ui  registerdialog.cpp  registerdialog.h  registerdialog.ui  seatitem.cpp  seatitem.h  seatselectionform.cpp  seatselectionform.h  seatselectionform.ui  setorder.cpp  setorder.h  setorder.ui  weatherforecastform.cpp  weatherforecastform.h  weatherforecastform.ui
